ipc update, builds, theme

--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -10,6 +10,14 @@
     <title>Acuamtica Dev Tools</title>
 
     <style>
+      .electionTitlebar {
+        -webkit-app-region: drag;
+      }
+
+      .electionNoDrag {
+        -webkit-app-region: no-drag;
+      }
+
       body,
       html {
         margin: 0;
@@ -28,6 +36,15 @@
       }
       ::-webkit-scrollbar-track {
         opacity: 0;
+      }
+
+      :link {
+        color: #00a9e2;
+        background-color: transparent;
+      }
+      :visited {
+        color: #00a9e2;
+        background-color: transparent;
       }
     </style>
   </head>
