--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -1,54 +1,51 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="script-src 'self' 'unsafe-inline'"
-    />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <title>Acuamtica Dev Tools</title>
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'" />
+		<meta name="viewport" content="initial-scale=1, width=device-width" />
+		<title>Acuamtica Dev Tools</title>
 
-    <style>
-      .electionTitlebar {
-        -webkit-app-region: drag;
-      }
+		<style>
+			.electionTitlebar {
+				-webkit-app-region: drag;
+			}
 
-      .electionNoDrag {
-        -webkit-app-region: no-drag;
-      }
+			.electionNoDrag {
+				-webkit-app-region: no-drag;
+			}
 
-      body,
-      html {
-        margin: 0;
-        padding: 0;
-      }
-      body {
-        overflow: overlay;
-      }
-      ::-webkit-scrollbar {
-        width: 6px;
-        height: 10px;
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #545a60;
-        border-radius: 6px;
-      }
-      ::-webkit-scrollbar-track {
-        opacity: 0;
-      }
+			body,
+			html {
+				margin: 0;
+				padding: 0;
+			}
+			body {
+				overflow: overlay;
+			}
+			::-webkit-scrollbar {
+				width: 6px;
+				height: 10px;
+			}
+			::-webkit-scrollbar-thumb {
+				background: #545a60;
+				border-radius: 6px;
+			}
+			::-webkit-scrollbar-track {
+				opacity: 0;
+			}
 
-      :link {
-        color: #00a9e2;
-        background-color: transparent;
-      }
-      :visited {
-        color: #00a9e2;
-        background-color: transparent;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+			:link {
+				color: #00a9e2;
+				background-color: transparent;
+			}
+			:visited {
+				color: #00a9e2;
+				background-color: transparent;
+			}
+		</style>
+	</head>
+	<body>
+		<div id="root"></div>
+	</body>
 </html>
